--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js",
+        "start": "env-cmd -f ./config/prod.env node src/index.js",
+        "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
         "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^7.5.0",
         "bcryptjs": "^2.4.3",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.8",
         "mongoose": "^5.12.10",
         "multer": "^1.4.3",
+        "sharp": "^0.29.1",
         "validator": "^13.6.0"
     },
     "devDependencies": {
+        "env-cmd": "^10.1.0",
         "jest": "^27.0.4",
         "nodemon": "^2.0.7"
     }
